<resources>
    <string name="app_name">佛山禁毒</string>

    <string name="error_network">网络出错啦，请稍后重试！</string>
    <string name="resource">资源</string>
    <string name="counselor">咨询</string>
    <string name="mine">我的</string>

    <string name="tip_exit">再按一次退出</string>
    <string name="psychological">心里</string>
    <string name="psychological_en">Psychological</string>
    <string name="medical">医疗</string>
    <string name="medical_en">Medical</string>
    <string name="legal">法律</string>
    <string name="legal_en">Legal</string>
    <string name="social_worker">社工</string>
    <string name="social_worker_en">Social worker</string>
    <string name="editable">编辑</string>
    <string name="tvUserName">用户名称</string>
    <string name="level_normal">普通用户</string>
    <string name="me_consultation">我的咨询</string>
    <string name="me_experter">我的专家</string>
    <string name="me_reporter">我的报告</string>
    <string name="me_suggestion">我的处方</string>
    <string name="my_file">我的档案</string>
    <string name="my_appointment">我的预约</string>
    <string name="my_worker">我的社工</string>
    <string name="my_tester">我的测评</string>
    <string name="machine_setting">AI机器人设置</string>
    <string name="voice_wakeup">语音唤醒</string>
    <string name="closed">已关闭</string>
    <string name="voice_setting_notice">关闭后将无法在AI咨询通过\"咨询\"来语音唤醒AI机器人</string>
    <string name="new_msg_notice">新消息通知</string>
    <string name="unlock_ways">解锁方式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_update">版本更新</string>
    <string name="version_update_tips">已是最新版本</string>
    <string name="policy_privacy">隐私政策</string>
    <string name="sugession_feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="ignore_login">跳过</string>
    <string name="platform_name">联众咨询服务平台</string>
    <string name="phone_login">手机登录</string>
    <string name="hint_input_account">请输入手机号</string>
    <string name="hint_input_msgcode">请输入验证码</string>
    <string name="get_msgcode">获取验证码</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="third_account_login">第三方账号登录</string>
    <string name="login_wechat">微信</string>
    <string name="login_qq">QQ</string>
    <string name="toast_account_not_empty">手机号码不能为空！</string>
    <string name="cancle">取消</string>
    <string name="phone_registe">手机号注册</string>
    <string name="agree">同意</string>
    <string name="protocol_doc">《联众咨询平台用户服务协议》</string>
    <string name="next_step">下一步</string>
    <string name="my_consultation">我的咨询</string>
    <string name="checked_con_record">查看咨询记录</string>
    <string name="my_report">我的报告</string>
    <string name="checked_detail">查看详情</string>
    <string name="my_experter">我的专家</string>
    <string name="doctor_suggest">医生建议：</string>
    <string name="consultation_date">咨询时间：</string>
    <string name="consultation_descript">咨询内容：</string>
    <string name="patient">就 诊 人:</string>
    <string name="my_treatment">我的处方</string>
    <string name="user_name">姓名</string>
    <string name="connect_phone">联系电话</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="address">居住地</string>
    <string name="register">户籍</string>
    <string name="education">学历</string>
    <string name="video_play">视频播放</string>


</resources>
