<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_allFilled_style"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".ui.activity.RegisteActivity">

    <LinearLayout
        style="@style/layout_allFilled_style"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCancle"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_80"
            android:background="@drawable/tv_default_selector"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/cancle" />


        <TextView
            style="@style/item_tv_second_style"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/phone_registe" />

        <com.example.drugcontrol.widget.ClearEditText
            android:id="@+id/etAccount"
            style="@style/item_ed_style"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:drawableLeft="@drawable/ic_phonenumber"
            android:hint="@string/hint_input_account"
            android:inputType="number"
            android:maxLength="11"
            app:compoundDrawableHeight="@dimen/dp_20"
            app:compoundDrawableWidth="@dimen/dp_20"
            app:edittext_clear_icon="true"
            app:edittext_underline="true"
            app:edittext_underline_color="@color/line_color" />

        <FrameLayout
            style="@style/layout_widthfilled_style"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_30">

            <com.example.drugcontrol.widget.ClearEditText
                android:id="@+id/edMsgCode"
                style="@style/item_ed_style"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_verificationcode"
                android:hint="@string/hint_input_msgcode"
                android:inputType="number"
                android:maxLength="6"
                app:compoundDrawableHeight="@dimen/dp_20"
                app:compoundDrawableWidth="@dimen/dp_20"
                app:edittext_clear_icon="false"
                app:edittext_underline="true"
                app:edittext_underline_color="@color/line_color" />

            <TextView
                android:id="@+id/tvMsgCode"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/tv_default_selector"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/get_msgcode" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_30"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxProtocol"
                style="@style/layout_allWraped_style"
                android:layout_gravity="left"
                android:button="@drawable/check_box_custom_protocol"
                android:checked="true"
                android:scaleX="1.0"
                android:scaleY="1.0"
                android:layout_marginRight="@dimen/dp_10"/>

            <LinearLayout
                style="@style/layout_allWraped_style"
                android:layout_gravity="center_vertical">

                <TextView
                    style="@style/item_tv_third_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree" />

                <TextView
                    android:id="@+id/tvProtocol"
                    style="@style/item_tv_third_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_tv_color_01"
                    android:text="@string/protocol_doc"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/btn_style"
            android:layout_margin="@dimen/dp_30"
            android:layout_marginTop="@dimen/layout_Margin_30"
            android:text="@string/next_step" />

    </LinearLayout>

</ScrollView>